--- a/test.html
+++ b/test.html
@@ -3,7 +3,8 @@
 <head>
 <title>ACE in Action</title>
 <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
-<script src="esprima.js" type="text/javascript"></script>
+<script src="https://cdn.rawgit.com/jquery/esprima/2.7.2/esprima.js"></script>
+
 <style type="text/css" media="screen">
     #editor { 
         position: relative;
@@ -12,19 +13,20 @@
 </style>
 </head>
 <body>
-
-
+<textarea id="definition" rows="10" cols="50">
+{"a": ["IfStatement"], "b": ["WhileStatement"],"c": [{"type": "IfStatement", "next": [{"type": "ForStatement", "next": []}]}]
+}
+</textarea>
 <div id="editor">if(a == 1){
     for(i = 1; i <2; i++)
     {
         println("yo");
         
     }
-}
-</div>
+}</div>
 
 <p>Result:</p>
-<div id="result">initial state.
+<div id="result">initial state
 </div>
 
 <script src="https://cdn.jsdelivr.net/ace/1.2.3/min/ace.js" type="text/javascript" charset="utf-8"></script>
@@ -33,8 +35,8 @@
     var editor = ace.edit("editor");
     editor.setTheme("ace/theme/monokai");
     editor.getSession().setMode("ace/mode/javascript");
+    var nodes = esprima.parse(editor.getValue()).body;
+    console.log(nodes);
 </script>
-<script src="api.js" type="text/javascript" charset="utf-8"></script>
-<script src="test.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
