--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     for(i = 1; i <2; i++)
     {
         println("yo");
-        while(1){}
+        while(1){
+        if(1){}
+        }
         
     }
 }
